# lisa

./: LICENSE  README.md  pyproject.toml  requirements.txt
experiments/: drift_stabilization.py  nonlinear_mismatch.py  sweep_sensitivity.py
lisa/: __init__.py  config.py  core.py  dynamics.py  manifolds.py  torch_bridge.py
notebooks/: 01_linear_drift_demo.ipynb
tests/: test_core_mechanics.py  test_mechanics.py
