[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lisa-control"
version = "0.1.0"
description = "Latent Invariant Space Adaptation: A Dual-Timescale Framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "torch"
]

[project.optional-dependencies]
dev = ["pytest"]
